--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "algoliasearch": "^5.1.1",
     "firebase": "^10.12.2",
+    "instantsearch.css": "^8.5.0",
     "next": "14.2.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-instantsearch": "^7.13.0"
   },
   "devDependencies": {
     "@types/node": "^20",
