--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "^14.2.7",
     "algoliasearch": "^5.1.1",
     "firebase": "^10.12.2",
     "instantsearch.css": "^8.5.0",
