--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.5.0",
     "react-instantsearch": "^7.13.0"
   },
   "devDependencies": {
